force-app/main/default/objects/vlocity_ps__Attribute__c/vlocity_ps__Attribute__c.object-meta.xml
<CustomObject>
    <label>Vlocity Attribute</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>