force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__AttributeCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeCategoryCode__c</fullName>
    <description>Formula: Code of the parent attribute category.</description>
    <formula>vlocity_ps__AttributeCategoryId__r.vlocity_ps__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Category Code</label>
    <type>Text</type>
</CustomField>