force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__AttributeCategoryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeCategoryId__c</fullName>
    <description>Parent attribute category. Used for organizing the attributes into groupings.</description>
    <label>Attribute Category</label>
    <referenceTo>vlocity_ps__AttributeCategory__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>