force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__AttributeGroupType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeGroupType__c</fullName>
    <label>Attribute Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Link Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>