force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__DisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DisplaySequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Display sequence for this attribute within pick lists.</description>
    <label>Display Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>