force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__HelpText__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HelpText__c</fullName>
    <description>Help text to display when end users are configuring this attribute.</description>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>