force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__IsCloneable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsCloneable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this attribute should be cloned while cloning a line item.</description>
    <label>Cloneable</label>
    <type>Checkbox</type>
</CustomField>