force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__isDefaultHidden__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__isDefaultHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden By Default</label>
    <type>Checkbox</type>
</CustomField>