force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__IsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encrypted</label>
    <type>Checkbox</type>
</CustomField>