force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the User that is considered the owner of this attribute.</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VlocityAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>