force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__PicklistId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PicklistId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the Vlocity Picklist that provides the valid values for this attribute.</description>
    <label>Picklist</label>
    <referenceTo>vlocity_ps__Picklist__c</referenceTo>
    <relationshipLabel>Vlocity Attributes</relationshipLabel>
    <relationshipName>Vlocity_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>