force-app/main/default/objects/vlocity_ps__Attribute__c/fields/vlocity_ps__Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Value__c</fullName>
    <description>Default value for this attribute when assigned to an object.</description>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>