force-app/main/default/objects/vlocity_ps__Attribute__c/validationRules/vlocity_ps__BooleanType.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__BooleanType</fullName>
    <active>true</active>
    <errorConditionFormula>(( TEXT( vlocity_ps__ValueType__c ) = &apos;Checkbox&apos;)) &amp;&amp;  NOT(ISBLANK( vlocity_ps__Value__c )) &amp;&amp; NOT(( vlocity_ps__Value__c = &apos;true&apos; ) || ( vlocity_ps__Value__c = &apos;false&apos; ))</errorConditionFormula>
    <errorMessage>Value must be a Boolean.</errorMessage>
</ValidationRule>