force-app/main/default/objects/vlocity_ps__Attribute__c/validationRules/vlocity_ps__DateTimeType.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__DateTimeType</fullName>
    <active>true</active>
    <errorConditionFormula>(( TEXT( vlocity_ps__ValueType__c ) = &apos;DateTime&apos;)) &amp;&amp;  NOT( ISBLANK( vlocity_ps__Value__c )) &amp;&amp; ( ISBLANK(DATETIMEVALUE( vlocity_ps__Value__c )))</errorConditionFormula>
    <errorMessage>Value must be a valid DateTime Type YYYY-MM-DD .</errorMessage>
</ValidationRule>