force-app/main/default/objects/vlocity_ps__Attribute__c/validationRules/vlocity_ps__DateType.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__DateType</fullName>
    <active>true</active>
    <errorConditionFormula>(( TEXT( vlocity_ps__ValueType__c )  = &apos;Date&apos;))  &amp;&amp;  NOT( ISBLANK( vlocity_ps__Value__c )) &amp;&amp;  ( ISBLANK(DATEVALUE( vlocity_ps__Value__c )))</errorConditionFormula>
    <errorMessage>Value must be a valid Date Type YYYY-MM-DD.</errorMessage>
</ValidationRule>