force-app/main/default/objects/vlocity_ps__Attribute__c/validationRules/vlocity_ps__PicklistType.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__PicklistType</fullName>
    <active>true</active>
    <errorConditionFormula>(( TEXT( vlocity_ps__ValueType__c )  = &apos;Picklist&apos;)|| ( TEXT( vlocity_ps__ValueType__c )  = &apos;Multi Picklist&apos;))  &amp;&amp;  ( ISBLANK(  vlocity_ps__PicklistId__c ))</errorConditionFormula>
    <errorMessage>Picklist must be selected for Picklist and Multi Picklist type attributes.</errorMessage>
</ValidationRule>